# keep-your-contacts

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  svelte.config.js
.sqlx/: query-0f052e1a88f7d88b2a49a385399d1ea42757e8cc11cb46e2c64fa338e08bd503.json  query-0f6aa7cc9bcdc694a2d0f95730802ab2e7d6194aceef1e894543722478422c56.json  query-11c2c3f426188bf120c39f165c6c70322d03398ef6db3452b5e372445e6d43dd.json  query-187a39d63e666439facc07c236d0145ee07b6e16da55765f0e0ea6ada7a686a4.json  query-41cbf35859b9095b1411ed0e3203256996b302d6bbb66bc98258c8f4c0abc9b7.json  query-420a0d0f8be0e5ac2b074586fb7be70693c7397203509abad70332af04d195e8.json  query-50064524d1f6fa2c55f0d19343779e9c1e5dd7bdf05c37a78f3e5445921c46ce.json  query-5254207127add845ef05e7983368dcad1bcd374cfe5ca89819b089f50f26b440.json  query-65f5c8d18a295ede72cdb90e218fc311924864bbd1bb68eadaabb4a2a7b2c83d.json  query-6678751462a861a3c9e112ce5ef9e0cdd7f13d005926f3ea4470dc265686385e.json  query-8be3ef1f8c264aff846382356afe9418d90659095fb4c5cbff5eef231b24b857.json  query-ba4aee3c7e6cca1e4675fab2a45a064e3a45d8d134d9f5e5583fe4c0d37a4bf9.json  query-bb72bf229e73e01dbe75124f9873359fafca8d83646df015461e1d9263053a70.json  query-c5a54207f1559255108ffa5f1a364a20941daffd31c35d5f8f8b32c9888ae9bd.json  query-c949e46fc0334cb1f242841bfdafa6227c8a71f613ea25d0038b0fd891d5bc1a.json  query-d8eda5bfec7a92b162bb06d94760c82a6348bacefdf84857e0deb48a4202be86.json  query-dcbd632c11533dbac954fe04fe2a6bd9a0d90f40598416e9d8e6a011ab1b701e.json
migrations/: 20250405082914_test.sql  20250406175625_test.sql  20250410194905_persons.sql  20250419054920_user.sql
src/: app.d.ts  hooks.server.ts  lib.rs  main.rs  state.svelte.ts  style.css
src/api/: README.md  add_person.rs  errors.rs  get_known_from_sources.rs  get_metadata.rs  get_persons.rs  known_from_sources_routes.rs  mod.rs  post_person.rs  retrieve.rs  update_person.rs
src/api/auth/: handler.rs  jwt_auth_middleware.rs  mod.rs  responses.rs
src/api/known_from_sources/: known_from_sources_routes.rs  mod.rs
src/api/persons/: get_coordinates.rs  mod.rs  post_person.rs  update_person.rs
src/api/retrieve_persons/: get_persons.rs
src/components/: AddPerson.svelte  AddPersonPopup.svelte  EditModal.svelte  Table.svelte
src/lib/: index.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  state.svelte.ts
src/routes/dashboard/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  state.svelte.ts  store.ts
src/routes/login/: +page.server.ts  +page.svelte
(+18 files in other folders)
