[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum ={ version = "*", features = ["query", "json"]}
shuttle-axum = "*"
shuttle-runtime = "*"
tokio = "*"
shuttle-shared-db = { version = "*", features = ["postgres", "sqlx"] }
sqlx = { version = "*", features = ["macros", "chrono", "postgres", "json"] }
serde = "*"
serde_json = "*"
tower-http = { version = "*", features = ["cors"] }
reverse_geocoder = "*"
